# CPM

./: .gitignore  README.md  package.json
app/: index.js
app/templates/: CMakeLists.txt
app/templates/apps/: CMakeLists.txt
app/templates/apps/app/: CMakeLists.txt
generators/init/: index.js
generators/init/templates/: CMakeLists.txt  CMakePresets.json
generators/init/templates/.github/workflows/: ci.yml
generators/init/templates/cmake/: cpm.cmake
generators/init/templates/libs/: CMakeLists.txt
generators/new/: index.js
generators/new/templates/app/: CMakeLists.txt  main.cpp
generators/new/templates/lib/: CMakeLists.txt  module.ixx  test_module.cpp
test/: CMakeLists.txt  CMakePresets.json
test/apps/myapp/: CMakeLists.txt
